--- a/css/style.css
+++ b/css/style.css
@@ -33,20 +33,24 @@ h2 {
 .text {
 	margin-top: 40px;
 	margin-bottom: 40px;
+	margin-right:0;
+	margin-left: 0;
 }
 
 #qt {
 	font-family: 'Dekko';
 }
 
-li {
-	list-style-type: none;
+p {
 	font-size: 20px;
-	margin-top:5px;
 	font-family: 'Open Sans', sans-serif;
 }
 
-
+#sign {
+	float:right;
+	margin-right:100px;
+	font-size:20px;
+}	
 
 h3 {
 	font-family:'Pacifico';
@@ -56,6 +60,25 @@ h3 {
 
 
 .logo {
-	width:200px;
-	height:200px;
+	width:250px;
+	height:250px;
+}
+
+.quote {
+	margin-bottom: 50px;
+}
+
+.foto {
+	float: middle;
+	margin-right:0;
+}
+
+.links {
+	text-align: center;
+	font-size:30px;
+}	
+
+i {
+	margin-left: 8px;
+	color: black;
 }
