--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,6 @@ h2 {
 	min-height: 400px; 
 }
 
-.col-sm-6 {
-	margin:0px;
-}
-
-.img-responsive {
-	margin:0px;
-}
-
-
 .text {
 	margin-top: 40px;
 	margin-bottom: 40px;
@@ -44,6 +35,7 @@ h2 {
 p {
 	font-size: 20px;
 	font-family: 'Open Sans', sans-serif;
+  text-align: center;
 }
 
 #sign {
@@ -81,4 +73,25 @@ h3 {
 i {
 	margin-left: 8px;
 	color: black;
+}
+
+#image {
+  max-width: 100%;
+  display: block;
+  margin: auto
+}
+
+#img-caption {
+  margin-top: 20px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 30px;
+	text-align: center;
+}
+
+.link {
+  text-align:center;
+}
+
+a {
+  font-size:30px;
 }
